Adjust waybar to fix flickering issues caused by hyprland's new renderer

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     border: none;
-    border-radius: 9px;
+    border-radius: 0px;
     font-family: "JetBrainsMono Nerd Font";
     font-weight: bold;
     font-size: 12px;
@@ -10,13 +10,11 @@
 @import "theme.css";
 
 window#waybar {
-    background: @main-bg;
-        opacity: 0.7;
-    
+    background: none;
 }
 
 tooltip {
-    background: @main-bg;
+    background: #FFFFF9;
     border-radius: 7px;
     border-width: 0px;
 }
@@ -31,6 +29,7 @@ tooltip label {
 
 .modules-right {
     margin-right: 20px;
+    background: none;
 }
 
 #workspaces button {
@@ -96,12 +95,12 @@ tooltip label {
 }
 
 #tray {
-    margin-left: 100px;
+    margin-left: 225px;
     margin-right: 8px;
 }
 
 #tray menu * {
-    min-height: 16px
+    min-height: 16px;
 }
 
 #tray menu separator {
@@ -110,6 +109,7 @@ tooltip label {
 
 #clock {
     color: @main-fg;
+    background: none;
 }
 
 #backlight,
@@ -120,7 +120,9 @@ tooltip label {
 #custom-cpuinfo,
 #cpu,
 #custom-gpuinfo,
-#idle_inhibitor,
+#idle_inhibitor {
+    margin-right: 6px;
+}
 #custom-keybindhint,
 #language,
 #memory,
@@ -138,7 +140,7 @@ tooltip label {
 #network,
 #window {
     color: @main-fg;
-    background: @main-bg;
+    background: none;
     margin: 4px 0px 4px 0px;
     padding-left: 8px;
     padding-right: 8px;
